Sutter Health/src/objects/AQRS_Dynamic_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>GICSelectedFields__c</fullName>
        <label>GICSelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GICUnSelectedFields__c</fullName>
        <label>GICUnSelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SelectedFields__c</fullName>
        <label>SelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnSeletedFields__c</fullName>
        <label>UnSeletedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AQRS Dynamic Fields</label>
    <pluralLabel>AQRS Dynamic Fields</pluralLabel>
</CustomObject>